Wave of changes based on JGC staff issue reporting

--- a/content-menu-top.html
+++ b/content-menu-top.html
@@ -29,7 +29,7 @@
     <div id="sub_menu">
       <ul class="sf-menu">
         <li class="current">
-          <a href="/">About JGC</a>
+          <a href="#">About JGC</a>
           <ul>
             <li>
               <a href="/about_jgc/mission.html">Mission & Principles</a>
@@ -51,7 +51,7 @@
               </ul>
             </li>
             <li>
-              <a href="#aa">Jobs</a>
+              <a href="/about_jgc/jobs.html">Jobs</a>
             </li>
             <li class="current">
               <a href="/about_jgc/contact.html">Contact</a>
@@ -74,6 +74,10 @@
             </li>
             <li>
               <a href="/our_work/allwork.html">Browse All Work</a>
+              <ul>
+                <li class="current"><a href="/our_work/research.html">By Project</a></li>
+                <li><a href="/our_work/topic.html">By Topic</a></li>
+              </ul>
             </li>
           </ul>
         </li>
@@ -84,7 +88,7 @@
           <ul>
             <li class="current"><a href="/partners/local.html">Local</a></li>
             <li><a href="/partners/national.html">National</a></li>
-            <li><a href="/partners/highlights.htm/partners/highlights.htmll">Highlights</a></li>
+            <li><a href="/partners/partner-highlights.html">Highlights</a></li>
             <li><a href="/partners/become_partner.html">Become a Partner</a></li>
           </ul>
         </li>
@@ -97,6 +101,9 @@
             <li><a href="/resources/presentations.html">Presentations</a></li>
             <li><a href="/resources/links.html">Links</a></li>
           </ul>
+        </li>
+        <li>
+          <a href="#ab">News & Events</a>
         </li>
       </ul>
       <span id="donate-button">
