--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@ document.createElement("article" );
 				<div class="feature_text">
 					&nbsp;<br>
 					<ul class="pdf">
-						<li><a href="/resources/publications/JGC_IB_Motivation2010.pdf"> Practices that Promote Middle School Students’ Motivation and Achievement</a></li>
-						<li><a href="/resources/publications/JGC_IB_AfterSchoolPhysicalFitness2011.pdf" >Community-Based After School Programs and Youth Physical Fitness</a></li>
+						<li><a class="link-homepage-feature" href="/resources/publications/JGC_IB_Motivation2010.pdf"> Practices that Promote Middle School Students’ Motivation and Achievement</a></li>
+						<li><a class="link-homepage-feature" href="/resources/publications/JGC_IB_AfterSchoolPhysicalFitness2011.pdf" >Community-Based After School Programs and Youth Physical Fitness</a></li>
 						
 					</ul>
 				</div>
@@ -107,30 +107,22 @@ document.createElement("article" );
 						Redwood City 2020’s Immigrant Youth Action Team (IYAT) increases support for immigrant youth.
 					</p>
 					<p>
-					<a href="/partners/highlights.html">Learn More</a>	
+					<a class="link-homepage-feature" href="/partners/cydi-learn-more.html">Learn More</a>	
 					</p>
 				</div>
 			</div>
 			<div class="feature">
 				<div class="feature_title">
 					<span id="blog">
-					        News & Events	
+					        Upcoming Events	
 					</span>
 				</div>
 				<div class="feature_text">
 					<p>
 						<ul class="news">
-              <li>January 27: Founding Director Milbrey McLaughlin presents at Bay Area <a href="http://learninginafterschool.org/howkidslearn/wp/">Conference on How Kids Learn</a></li>
-              <li>March 8:  Senior Policy Analyst Oded Gurantz presents at the <a href="http://cepa.stanford.edu/ecology/workshops">Postsecondary Ecology Workshop 2012 </a> at Stanford</li>
+              <li>January 27: Founding Director Milbrey McLaughlin presents at Bay Area <a class="link-homepage-feature" href="http://learninginafterschool.org/howkidslearn/wp/">Conference on How Kids Learn</a></li>
+              <li>March 8:  Senior Policy Analyst Oded Gurantz presents at the <a class="link-homepage-feature" href="http://cepa.stanford.edu/ecology/workshops">Postsecondary Ecology Workshop 2012 </a> at Stanford</li>
 						</ul>
-					</p>
-					<p>
-						<a href="http://gardnercenter.wordpress.com">More...</a>
-					</p>
-					<p>
-						<a href="http://www.twitter.com/gardnercenter">
-                                                <img src="images/index/follow_on_twitter.png"> 
-                                                Follow on Twitter</a>
 					</p>
 				</div>
 			</div>
@@ -144,9 +136,9 @@ document.createElement("article" );
 				<div class="feature_text">
                                         &nbsp;<br>
 					<ul class="data">
-						<li><a href="http://www.communityschools.org/resources/community_schools_evaluation_toolkit.aspx">Community Schools Evaluation Toolkit</a></li>
-						<li><a href="http://jgcnet.stanford.edu">Map of EPA comunity programs</a></li>
-<li><a href="http://johnwgardnertestsite.pbworks.com/w/page/13471102/BASICS%20Toolkit">BASICS Toolkit: Building, Assessing, Sustaining, and Improving Community Schools</a></li>
+						<li><a class="link-homepage-feature" href="http://www.communityschools.org/resources/community_schools_evaluation_toolkit.aspx">Community Schools Evaluation Toolkit</a></li>
+						<li><a class="link-homepage-feature" href="http://jgcnet.stanford.edu">Map of EPA comunity programs</a></li>
+<li><a class="link-homepage-feature" href="http://johnwgardnertestsite.pbworks.com/w/page/13471102/BASICS%20Toolkit">BASICS Toolkit: Building, Assessing, Sustaining, and Improving Community Schools</a></li>
 					</ul>
 				</div>
 			</div>
@@ -159,7 +151,8 @@ document.createElement("article" );
                        <script src="http://connect.facebook.net/en_US/all.js#xfbml=1"></script><fb:like href="jgc.stanford.edu" layout="button_count" show_faces="false" width="90" font="" send="true" class="fb-like"></fb:like>
                      </li>
                      <li class=plugin>
-                       <a href="http://twitter.com/share?via=gardnercenter&amp;text=The non-profit Gardner Center at Stanford does great work in the field of youth development.&amp;url=http%3A%2F%2Fjgc.stanford.edu" class="twitter-share-button" data-count="none">Tweet</a><script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
+                        <a href="http://www.twitter.com/gardnercenter">
+                          <img src="/images/index/follow_on_twitter.png"></a>
                      </li>
                    </ul>
                    <ul class="piped_right">
@@ -173,8 +166,8 @@ document.createElement("article" );
                    <span class="left_footer_text"> 
                    Copyright &copy 2012 John W Gardner Center at Stanford University. All rights reserved.<br>Home page art by <a href="http://www.muralmusicarts.org">muralmusicarts.org</a>, lead artist Omar Ramirez</span> 
                    <ul class="piped">
-                     <li class="footer"><a href="#" id="first" class="footer">Terms of use</a></li>
-                     <li class="footer"><a href="#" class="footer">Privacy policy</a></li>
+                     <li class="footer"><a href="http://stanford.edu/site/terms.html" target="blank" id="first" class="footer">Terms of use</a></li>
+                     <li class="footer"><a href="https://pgnet22.stanford.edu/giving/part/common/privacy.html" target="_blank" class="footer">Privacy policy</a></li>
                    </ul>
                 </div>
 	 </div>
