--- a/our_work/content-allwork.html
+++ b/our_work/content-allwork.html
@@ -16,7 +16,8 @@
 			<li><a href="alt-ed.html">California Alternative Education Research Project</a></li>
 			<li><a href="cris.html">College Readiness Indicators Systems (CRIS)</a></li>
 			<li><a href="csri.html">Community Schools Resource Initiative (CSRI)</li>
-			<li><a href="acad_soc_emo.html">Connecting Academic with Social and Emotional Development</a></li>
+			<li><a href="cydi.html">Community Youth Development Initiative (CYDI)</li>
+			<li><a href="acad_soc_emo_devt.html">Connecting Academic with Social and Emotional Development</a></li>
 		</ul><br>
 	   <hr class="short-rule">
 	   
@@ -39,7 +40,7 @@
 
            <h1 class="content-text-header">O</h1>
 		<ul style="list-style: none;">
-			<li>Oakland PASS 2 Program Evaluation</a></li>
+			<li><a href="okf.html">Oakland PASS 2 Program Evaluation</a></li>
 		</ul><br>
 <hr class="short-rule">
 
@@ -64,7 +65,7 @@
 <hr class="short-rule">
 	   <h1 class="content-text-header">R</h1>
 		<ul style="list-style: none;">
-			<li>Redwood City-North Fair Oaks Prevention Partnership</li>
+			<li><a href="prevention_partnership.html">Redwood City-North Fair Oaks Prevention Partnership</a></li>
 			<li><a href="community_schools_eval.html">Redwood City Community Schools Evaluation</a></li>
 			<li><a href="community_schools_qual_eval.html">Redwood City Community Schools Qualitative Evaluation</a></li>
 		</ul><br>
