--- a/our_work/content-cydi.html
+++ b/our_work/content-cydi.html
@@ -14,6 +14,7 @@
       <li>Aim High</li>
       <li>Bay Area Gardeners Foundation</li>
       <li>Boys and Girls Clubs of the Peninsula</li>
+      <li>BUILD</li> 	
       <li>Cañada College – Upward Bound TRIO Program</li>
       <li>Casa de la Cultura Quetzalcoatl</li>
       <li>Center for Youth</li>
@@ -80,8 +81,10 @@
       </ul>
 <br>
 <h1 class="content-text-header">Publications</h1>
+<ul>
+<li><a href="/our_work/cydi/CYDI 120117 Overview - January 2012.pdf">CYDI Overview</a></li>
 <li><a href="/resources/reports/E. CYDI-PP 111014 CYDI Partner Survey Report.pdf">CYDI Partner Survey Report</a></li>   
-
+</ul>
 
  </div> <!--end right side box div-->
     </aside>
@@ -153,144 +156,12 @@ contribute. Towards that end, we have adopted the following set of overarching s
 
 <p>CYDI partners have many opportunities to be involved in a variety of activities through the year, including networking,
 
-professional growth and working in partnership with youth.</p>
+professional growth and working in partnership with youth. For more information, contact María Fernández, Policy
 
-<br>
+and Program Senior Manager at <a href="mailto: mafernandez@stanford.edu"> mafernandez@stanford.edu</a>.
+</p>
 
-<span class="content-bold">Action Teams</span><br>
 
-<p>The majority of our collaborative work brings organizational and community leaders together to address issues of mutual
-
-concern. A core of dedicated community partners spearheads the following action teams:</p>
-
-<ul>
-
-<li>Immigrant Youth Action Team (IYAT) – this youth-adult partnership team works to increase the visibility, actions, and
-
-resources for immigrant youth in our community through a variety of events, presentations and advocacy. </li>
-
-<li>Professional Development Action Team – this team of youth service providers works to weave their collective
-
-resources to support adults working with youth in our community by identifying and sharing tools and resources. </li>
-
-<li>Teens in Action Showcase – In partnership with Redwood City 2020’s Prevention Partnership, this annual spring
-
-event seeks to support and highlight the work, passions and contributions of youth across our community. </li>
-
-<li>Pride and Education/Orgullo y Educación (OYE) – This new ad-hoc team of youth and adults aims to promote the
-
-integration and educational, social and cultural success of youth from Redwood City and North Fair Oaks as a way of
-
-strengthening our community as a whole. This team hosts an annual fall conference for Latina/o youth. </li>
-
-</ul>
-
-<br>
-
-<span class="content-bold">Partner Convenings</span><br>
-
-<p>Convenings of organizational partners are hosted by
-
-Redwood City 2020 one to two times per year. Each partner
-
-organization commits to participate in these gatherings to
-
-learn from each other, stay updated on progress, and provide
-
-mutual support.</p>
-
-<br>
-<span class="content-bold">Professional Development</span><br>
-
-<p>CYDI provides opportunities in the community for partners to
-
-take part in a number of youth development professional
-
-development and learning experiences with other
-
-organizations throughout the year.</p>
-
-<br>
-<span class="content-bold">Communication and Information Sharing</span><br>
-
-<p>With a network of over 150 individuals working with and for
-
-youth in our community, CYDI serves as a conduit for
-
-promoting the exchange of information about resources,
-
-opportunities and success stories among our partners. All
-
-partners are invited and encouraged to share news and
-
-resources through our newsletters and website updates.</p>
-
-<br>
-<h1 class="content-text-header">Accountability</h1>
-
-<p>All CYDI partners make annual commitments to advance our
-
-shared outcomes by implementing core services, supports
-
-and opportunities within their organizations. Every year,
-
-partners also participate in an annual survey administered by
-
-the JGC that tracks our progress through key indicators
-
-related to our outcomes. A Steering Committee composed of
-
-the action team conveners meets quarterly to coordinate key
-
-activities. Annual presentations to report on our progress are
-
-made to RWC 2020’s Coordinating Council, which serve as
-
-opportunities for organizational and community leaders to
-
-discuss critical accomplishments and challenges with local
-
-elected and appointed policy makers.</p>
-
-<br>
-
-<h1 class="content-text-header">Join Us!</h1>
-
-<p>The scope of this initiative in promoting youth development as
-
-a key strategy across a variety of RWC 2020 initiatives is
-
-broad and ambitious, but our young people and our
-
-community members deserve nothing less. We need help to
-
-sustain momentum and focus over time. But the skills,
-
-resources and commitment of our CYDI partners and our
-
-broader community give us reason to be positive about our
-
-chances for success.</p>
-
-<br>
-
-<p>If you would like to become a partner or find out how you can
-
-support this effort, please contact María Fernández, Policy
-
-and Program Senior Manager at the John W. Gardner Center
-
-for Youth and Their Communities at (650) 218-3140 or
-
-<a href="mailto: mafernandez@stanford.edu"> mafernandez@stanford.edu</a>.
-
-For more information about Redwood City 2020, please
-
-contact Patricia Brown, Executive Director at (650) 423-2217
-
-or <a href="mailto: pbrown@redwoodcity.org"> pbrown@redwoodcity.org</a>.
-
-Learn more about CYDI at www.rwc2020.org</p>
 
 
     </div>
