--- a/our_work/content-prevention_partnership.html
+++ b/our_work/content-prevention_partnership.html
@@ -12,13 +12,13 @@
       <h1 class="content-text-header">Partner Organizations</h1>
 <ul>
 <li>Redwood City 2020</li>
-<li>various Redwood City community partners</li> 
+
 </ul>
     
     </div> <!--end right side box div-->
     </aside>
 
-<p>The Redwood City and North Fair Oaks Prevention Partnership aims to foster a community environment that supports people to make healthy choices in their day-to-day lives.  The John W. Gardner Center is one of eleven organizations – representing schools, service providers, and local government agencies – working together to promote health and healthy messages, and to reduce the social, emotional and physical consequences of alcohol and other drug (AOD)abuse in the community. Specifically, JGC provides facilitation and expertise in youth-adult partnership, youth led research, and evaluation strategies. </p>
+<p>The Redwood City and North Fair Oaks Prevention Partnership, an initiative of Redwood City 2020, aims to foster a community environment that supports people to make healthy choices in their day-to-day lives.  The John W. Gardner Center is one of eleven organizations – representing schools, service providers, and local government agencies – working together to promote health and healthy messages, and to reduce the social, emotional and physical consequences of alcohol and other drug (AOD) abuse in the community. Specifically, JGC provides facilitation and expertise in youth-adult partnership, youth led research, and evaluation strategies. </p>
          </div>
 
        
