--- a/resources/content-journals.html
+++ b/resources/content-journals.html
@@ -8,13 +8,20 @@
        <h1 class="title-page-header-big">Academic Journal and Chapters</h1>
 <br>
 
-<p>Castrechini, Sebastian; Ardoin, Nicole M. (Spring 2011). <a href="/resources/journals/Castrechini_JA_Youth Resource Mapping Partnering with Service Providers and Youth to Understand the Supply and Demand for Youth Services in a Local Context_2011_Final.pdf"><span class="content-italic">Youth Resource Mapping: Partnering with Service Providers and Youth to Understand the Supply and Demand for Youth Services in a Local Context.</span></a>Perspectives on Urban Education.</p>
+
+<p>London, R. and Castrechini, S. (July 2011). <span class="content-italic"><a href="http://onlinelibrary.wiley.com/doi/10.1111/j.1746-1561.2011.00608.x/abstract">A Longitudinal Examination of the Link Between Youth Physical Fitness and Academic Achievement.</a></span> Journal of School Health, Volume 81, Issue 7, pp. 400–408.</p>
 <br>
 
-<p>London, Rebecca A.; Gurantz, Oded; Norman, Jon. (Spring 2011). <a href="/resources/journals/London_JA_The Effect of Afterschool Program Participation on English Language Acquisition_2011_Final.pdf"><span class="content-italic">The Effect of After school Program Participation on English Language Acquisition. </span></a> Afterschool Matters.</p>
+<p>Castrechini, S. and Ardoin, N. (Spring 2011). <a href="/resources/journals/Castrechini_JA_Youth Resource Mapping Partnering with Service Providers and Youth to Understand the Supply and Demand for Youth Services in a Local Context_2011_Final.pdf"><span class="content-italic">Youth Resource Mapping: Partnering with Service Providers and Youth to Understand the Supply and Demand for Youth Services in a Local Context.</span></a> Perspectives on Urban Education.</p>
 <br>
 
-<p>Strobel, K.; Kirshner, B.; O'Donoghue, J.; McLaughlin, M. (August 2008). <a href="/resources/journals/Strobel_JA_Qualities that Attract Urban Youth to After-School Settings and Promote Continued Participation_2008_Final.pdf"><span class="content-italic">Qualities That Attract Urban Youth to After-School Settings and Promote Continued Participation.</span></a> Teachers College Record. Volume 110, Number 8, pp. 1677-1705.</p>
+<p>London, R., Gurantz, O, and Norman, J. (Spring 2011). <a href="/resources/journals/London_JA_The Effect of Afterschool Program Participation on English Language Acquisition_2011_Final.pdf"><span class="content-italic">The Effect of After school Program Participation on English Language Acquisition.</span></a> Afterschool Matters.</p>
+<br>
+
+<p>London, R. and Gurantz, O.  (April 2010).  <span class="content-italic"><a href="http://www.tandfonline.com/doi/abs/10.1080/10824661003635259">Data Infrastructure and Secondary to Postsecondary Tracking.</a></span class="content-italic">  Journal of Education for Students Placed at Risk (JESPAR), Volume 15, Issue 1-2, pp. 186-199.</p>
+<br>
+
+<p>Strobel, K., Kirshner, B., O'Donoghue, J., and ] McLaughlin, M. (August 2008). <a href="/resources/journals/Strobel_JA_Qualities that Attract Urban Youth to After-School Settings and Promote Continued Participation_2008_Final.pdf"><span class="content-italic">Qualities That Attract Urban Youth to After-School Settings and Promote Continued Participation.</span></a> Teachers College Record. Volume 110, Number 8, pp. 1677-1705.</p>
 <br>
 
 <p>Anyon, Y., Fernandez, M. (Summer 2008). <a href="/resources/journals/Anyon_JA_Model Youth Programs A Key Strategy for Developing Community-University Partnerships Using A Community Youth Development Approach_2006_Final.pdf"><span class="content-italic">Model Youth Programs: A Key Strategy for Developing Community-University Partnership Using a Community Youth Development Approach.</span></a> Journal of Youth Development, Volume 3, Number 1, pp. 102-110.</p>
@@ -39,7 +46,7 @@
 <p>Anyon, Y. & Fernández M. (Fall 2007). <a href="/resources/journals/Anyon_JA_Realizing the Potential of Community-University Partnerships_2007_Final.pdf"><span class="content-italic"><span class="content-italic">Realizing the Potential of Community-University Partnerships.</span></a> Change, The Magazine of Higher Learning, November/December 2007.</p>
 <br>
 
-<p>Conner, J. O. and Strobel, K. (May 2007). <a href="/resources/journals/Conner_JA_Leadership Development An Examination of Individual and Programmatic Growth_2007_Final.pdf"><span class="content-italic"><span class="content-italic">Leadership Development: An Examination of Individual and Programmatic Growth.</span></a>Journal of Adolescent Research. </p>
+<p>Conner, J. O. and Strobel, K. (May 2007). <a href="/resources/journals/Conner_JA_Leadership Development An Examination of Individual and Programmatic Growth_2007_Final.pdf"><span class="content-italic"><span class="content-italic">Leadership Development: An Examination of Individual and Programmatic Growth.</span></a> Journal of Adolescent Research. </p>
 <br>
 
 <p>Scott, W.R., Deschenes, S., Hopkins, K., Newman, A., and McLaughlin, M. (December 2006). <a href="/resources/journals/Scott_JA_Advocacy Organizations and the Field of Youth Services Ongoing Efforts to Restructure a Field_2006_Final.pdf"><span class="content-italic">Advocacy Organizations and the Field of Youth Services: Ongoing Efforts to Restructure a Field.</span></a> Nonprofit and Voluntary Sector Quarterly. Volume 35, Number 4, pp. 697-714.</p>
