--- a/resources/content-policy_fact_sheets.html
+++ b/resources/content-policy_fact_sheets.html
@@ -11,7 +11,7 @@
 <br>
     <a href="Sanchez_PFS_Examining Truancy and Early Chronic Absenteeism in California_2010_Final.pdf">Examining Truancy and Early Chronic Absenteeism in California</a><br>
 <br>
-    <a href="Castrechini_PFS_Fostering Educational Success Legislation and Policies to Promote Positive Educational Experiences for California's Foster Youth_2009_Final.pdf">Fostering Educational Success: Legislation and Policies to Promote Positive Educational Experiences for California's Foster Youth</a>
+    <a href="Castrechini_PFS_Fostering Educational Success Legislation and Policies to Promote Positive Educational Experiences for California's Foster Youth_2009_Final.pdf">Fostering Educational Success: Legislation and Policies to Promote Positive Educational Experiences for California's Foster Youth</a><br>
 <br>
     <a href="Gurantz_PFS_Using the American Community Survey U.S. Census Data at the Community Level_2009_Final.pdf">Using the American Community Survey: U.S. Census Data at the Community Level</a><br>
 <br>
