--- a/about_jgc/content-stanford.html
+++ b/about_jgc/content-stanford.html
@@ -7,7 +7,7 @@
           <h1 class="title-page-header-big">At Stanford </h1>
           <br>
 
-          <p> Situated within the School of Education at Stanford University, JGC has access to the intellectual resources of one of the worlds leading research institutions and the ability to apply them to the Centers mission of effecting change to improve the lives of youth. </p>
+          <p> Situated within the School of Education at Stanford University, JGC has access to the intellectual resources of one of the world's leading research institutions and the ability to apply them to the Center's mission of effecting change to improve the lives of youth. </p>
           <br>
 
           <p>The JGC's connection to Stanford is central to how we work; JGC accelerates Stanford's leadership role in community development while JGC draws on the knowledge, expertise and resources of Stanford students and faculty in order to achieve its mission of youth development and community renewal.</p>
@@ -23,10 +23,10 @@
           <p>Through connections to our projects and our community partners, students deepen and ground academic concepts in real-world contexts, learn from practitioners and researchers in the field, and contribute their skills and knowledge to benefit community partners.</p>
           <br>
           <span class="content-bold">Providing Students with Research Opportunities</span> 
-          <p>We provide and facilitate student internships in collaboration with programs such as the Urban Studies Program, the Prevention Research Center, the Haas Center for Public Service and the Stanford Undergraduate Research Programs (SURP). JGC also prepares students to conduct community-based research as part of honors theses, research fellowships and dissertations.</p>
+          <p>We provide and facilitate student internships in collaboration with programs such as the <a href="http://urbanstudies.stanford.edu/" target="_blank">Urban Studies Program</a>, the <a href="http://prevention.stanford.edu/" target="_blank">Prevention Research Center</a>, <a href="http://studentaffairs.stanford.edu/haas" target="_blank">the Haas Center for Public Service</a> and the Stanford Undergraduate Research Programs (SURP). JGC also prepares students to conduct community-based research as part of honors theses, research fellowships and dissertations.</p>
           <br>
           <span class="content-bold">Partnering in to Connect Research and Practice</span> 
-          <p>JGC staff and faculty partner with others in the School of Education, School of Medicine, and Haas Center for Public Service in joint research and community based partnerships. Just as the JGC seeks to link efforts and resources in community settings, we also strive to do this with and among our University colleagues.</p>
+          <p>JGC staff and faculty partner with others in the <a href="http://ed.stanford.edu/" target="_blank">School of Education</a>, <a href="stanford school of medicine" target="_blank">School of Medicine</a>, and <a href="http://studentaffairs.stanford.edu/haas" target="_blank">Haas Center for Public Service</a> in joint research and community-based partnerships. Just as the JGC seeks to link efforts and resources in community settings, we also strive to do this with and among our University colleagues.</p>
           <br> 
 
          </div>
