--- a/content-footer.html
+++ b/content-footer.html
@@ -7,7 +7,8 @@
                        <script src="http://connect.facebook.net/en_US/all.js#xfbml=1"></script><fb:like href="jgc.stanford.edu" layout="button_count" show_faces="false" width="90" font="" send="true" class="fb-like"></fb:like>
                      </li>
                      <li class=plugin>
-                       <a href="http://twitter.com/share?via=gardnercenter&amp;text=The non-profit Gardner Center at Stanford does great work in the field of youth development.&amp;url=http%3A%2F%2Fjgc.stanford.edu" class="twitter-share-button" data-count="none">Tweet</a><script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
+                        <a href="http://www.twitter.com/gardnercenter">
+                          <img src="/images/index/follow_on_twitter.png"></a>
                      </li>
                    </ul>
                    <ul class="piped_right">
@@ -21,8 +22,8 @@
                    <span class="left_footer_text"> 
                    Copyright &copy 2012 John W Gardner Center at Stanford University. All rights reserved.<br>Home page art by <a href="http://www.muralmusicarts.org">muralmusicarts.org</a>, lead artist Omar Ramirez</span> 
                    <ul class="piped">
-                     <li class="footer"><a href="#" id="first" class="footer">Terms of use</a></li>
-                     <li class="footer"><a href="#" class="footer">Privacy policy</a></li>
+                     <li class="footer"><a href="http://stanford.edu/site/terms.html" target="_blank" id="first" class="footer">Terms of use</a></li>
+                     <li class="footer"><a href="https://pgnet22.stanford.edu/giving/part/common/privacy.html" target="_blank" class="footer">Privacy policy</a></li>
                    </ul>
                 </div>
       <footer>
