--- a/our_work/content-capacity_building.html
+++ b/our_work/content-capacity_building.html
@@ -10,6 +10,8 @@
       <h1 class="content-text-header">Projects</h1>
 <ul>
 <li><a href="csri.html">Community Schools Resource Initiative (CSRI)</a></li>
+<li><a href="cydi.html">Community Youth Development Initiative (CYDI)</a></li>
+
 
 <li><a href="mapping.html">East Palo  Alto Mapping Usability Study</a></li>
 
@@ -33,15 +35,15 @@
     </aside>
           <h1 class="title-page-header-big">Leadership Development</h1>
 
-<p>The JGC supports leaders within school districts and local youth-serving public agencies and community  based organizations to expand their potential by working cooperatively and collaboratively toward common goals.  In this sense, leadership development involves changing the paradigm from merely individually effective leaders to those who "can work in networks of responsibility" as John W. Gardner once wrote, to improve youth outcomes across boundaries and contexts</p>
+<p>The JGC supports leaders within school districts and local youth-serving public agencies and community  based organizations to expand their potential by working cooperatively and collaboratively toward common goals.  In this sense, leadership development involves changing the paradigm from merely individually effective leaders to those who "can work in networks of responsibility" as John W. Gardner once wrote, to improve youth outcomes across boundaries and contexts.</p>
 <br>  
 
 <p>We conduct leadership development through facilitation of initiatives and trainings that include:</p>
 <br>
 <ol> 
-<li>Cross-sector planning and community development (CYDI)</li>
-<li>Youth led research and youth leadership development (YELL, EPA Art and Music Center)</li>
-<li>Youth –adult partnerships to meet community-identified goals or outcomes (Prevention Partnership, CYDI)</li>
+<li>Cross-sector planning and community development (<a href="cydi.html">CYDI</a>)</li>
+<li>Youth led research and youth leadership development (<a href="yell.html">YELL</a>, <a href="youth_art_music.html">EPA Youth Art & Music Center</a>)</li>
+<li>Youth–adult partnerships to meet community-identified goals or outcomes (<a href="prevention_partnership.html">Prevention Partnership</a>, <a href="cydi.html">CYDI</a>)</li>
 <li>Stanford student support and training (internships, positions, course connections)</li>
 </ol> 
 <br>
@@ -49,7 +51,7 @@
 <h1 class="title-page-header-big">Capacity Building</h1>
 
 
-<p>JGC works with partners to develop and expand their skills and knowledge about researchable questions, data collection and interpretation, and valid and reliable indicators of positive youth development that will result in actionable findings to improve outcomes for youth.  The Center also youth development .  The JGC builds capacity building through ongoing partnerships and projects that: </p>
+<p>JGC works with partners to develop and expand their skills and knowledge about researchable questions, data collection and interpretation, and valid and reliable indicators of positive youth development that will result in actionable findings to improve outcomes for youth.    The JGC builds capacity  through ongoing partnerships and projects that: </p>
 <br>
 <ol> 
 <li>Use data to drive action. (Youth Data Archive, College Readiness Indicator Systems)</li>
