Syntax fixes, addition of new files

--- a/content-footer.html
+++ b/content-footer.html
@@ -10,6 +10,9 @@
                         <a href="http://www.twitter.com/gardnercenter">
                           <img src="/images/index/follow_on_twitter.png"></a>
                      </li>
+                     <li class=plugin>
+                        <g:plusone size="medium" annotation="none"></g:plusone>
+                     </li>
                    </ul>
                    <ul class="piped_right">
                      <li class="footer"><a href="/about_jgc/contact.html" class="footer">Contact Us</a></li>
