--- a/our_work/content-capacity_building.html
+++ b/our_work/content-capacity_building.html
@@ -13,7 +13,7 @@
 <li><a href="cydi.html">Community Youth Development Initiative (CYDI)</a></li>
 
 
-<li><a href="mapping.html">East Palo  Alto Mapping Usability Study</a></li>
+<li><a href="mapping.html">East Palo  Alto Youth Resource Mapping</a></li>
 
 <li><a href="youth_art_music.html">East Palo Alto Youth Art & Music Center</a></li>
 
