--- a/our_work/content-cris.html
+++ b/our_work/content-cris.html
@@ -73,7 +73,7 @@
 <p>Each participating district will develop a unique scope of work tailored to its particular needs that will be directly linked to the development of the tri-level system of college readiness indicators.</p>
 <br>
  
-<p>For more information about the College Readiness Indicator Systems initiative, please contact Angela Ongoco at <a href="mailto:aongoco@stanford.edu"> aongoco@stanford.edu </a>or Mary Arkins Decasse at <a href="mailto:mary_arkins@brown.edu">mary_arkins@brown.edu</a> </p>         </div>
+<p>For more information about the College Readiness Indicator Systems initiative, please contact Angela Ongoco at <a href="mailto:aongoco@stanford.edu"> aongoco@stanford.edu </a>or Mary Arkins Decasse at <a href="mailto:mary_arkins@brown.edu">mary_arkins@brown.edu</a>. </p>         </div>
 
 
 
