--- a/our_work/content-csri.html
+++ b/our_work/content-csri.html
@@ -31,7 +31,7 @@
 <p>A community school is both a place and a set of partnerships between the school and other community resources. Its integrated focus on academics, health and social services, youth and community development and community engagement leads to improved student learning, stronger families and healthier communities. By using schools as community hubs and a whole child approach, community schools bring together many partners to offer a range of supports and opportunities to children, youth, families and communities.</p>
 <br>
 <span class="content-bold">About CSRI Site Learning Sessions</span>
-<p>The Community School Resource Site Learning Sessions will bring together 5 teams from schools, districts, city/county agencies, and community-based organizations to gain knowledge of community schools as a strategy to better support their youth. These sites will participate in the following activities over the course of one academic year (September 2010. May 2011):</p>
+<p>The Community School Resource Initiative Site Learning Sessions will bring together 5 teams from schools, districts, city/county agencies, and community-based organizations to gain knowledge of community schools as a strategy to better support their youth. These sites will participate in the following activities over the course of one academic year (September 2010 - May 2011):</p>
 <ul>
     <li>Three interactive sessions with national leaders in the community school field to learn about the essential dimensions of developing or enhancing a rich and vibrant community school as a hub of their community.</li>
     <li>Guidance on how to use data (including multi-agency data) to evaluate their community school and better serve youth and families in their community.</li>
@@ -58,7 +58,7 @@
     <li>University of California, Davis, Center for Community School Partnerships (CCSP)</li>
 </ul>
 <br>
-<p>For more information about this initiative, please contact Bernadette Thomas Butler at (650) 498.4889 or btbutler@stanford.edu. To access tools and resources related to the JGC Community School Resource Initiative Site Learning Sessions, please visithttp://communityschoolresourceinitiative.pbworks.com</p>
+<p>For more information about this initiative, please contact Bernadette Thomas Butler at (650) 498.4889 or <a href="mailto:btbutler@stanford.edu">btbulter@stanford.edu</a>. To access tools and resources related to the JGC Community School Resource Initiative Site Learning Sessions, please visit <a href="http://communityschoolresourceinitiative.pbworks.com">The CSRI Wiki</a>.</p>
 
   
          </div>
