--- a/our_work/content-healthyschools.html
+++ b/our_work/content-healthyschools.html
@@ -20,7 +20,7 @@
 
 <span class="content-bold">Overview</span>
 
-<p>The John W. Gardner Center for Youth and Their Communities (JGC) at Stanford University, in partnership with the Sequoia Healthcare District (SHD) and four local school districts1, is conducting a three-year study of the Healthy Schools Initiative (HSI).  HSI seeks to improve student outcomes over the long term through increased coordination and access to health and wellness programming within districts and schools.  The study is currently in its second year; during the first year of the study, JGC worked with SHD to develop a logic model and conducted a needs assessment, mapping health and wellness programs in the four partner districts.  Years two and three of the study will focus on investigating the ways in which HSI implementation affects the coordination of health and wellness programs in schools and districts and how this, in turn, influences awareness and accessibility of programs and activities.  This study is a critical precursor to any future research on the ways that HSI influences individual student health outcomes.</p> 
+<p>The John W. Gardner Center for Youth and Their Communities (JGC) at Stanford University, in partnership with the Sequoia Healthcare District (SHD) and four local school districts, is conducting a three-year study of the Healthy Schools Initiative (HSI).  HSI seeks to improve student outcomes over the long term through increased coordination and access to health and wellness programming within districts and schools.  The study is currently in its second year; during the first year of the study, JGC worked with SHD to develop a logic model and conducted a needs assessment, mapping health and wellness programs in the four partner districts.  Years two and three of the study will focus on investigating the ways in which HSI implementation affects the coordination of health and wellness programs in schools and districts and how this, in turn, influences awareness and accessibility of programs and activities.  This study is a critical precursor to any future research on the ways that HSI influences individual student health outcomes.</p> 
 
  <br>
 
@@ -66,3 +66,4 @@
    
 
        </div>
+
