--- a/our_work/content-motivation.html
+++ b/our_work/content-motivation.html
@@ -14,9 +14,9 @@
 <ul>
 <li>Redwood City School District</li>
 </ul> 
-      <h1 class="content-text-header">Partner Organizations</h1><br>
+      <h1 class="content-text-header">Publications</h1>
 <ul>
-<li>Practices that Promote Middle School Students’Motivation and Achievement (<a href="/resources/publications/JGC_IB_Motivation2010.pdf">Issue Brief</a>)</li>
+<li>Practices that Promote Middle School Students’ Motivation and Achievement (<a href="/resources/publications/JGC_IB_Motivation2010.pdf">Issue Brief</a>)</li>
 </ul>
     
     </div> <!--end right side box div-->
