--- a/our_work/content-soccer.html
+++ b/our_work/content-soccer.html
@@ -13,7 +13,7 @@
       <h1 class="content-text-header">Partner Organizations</h1>
 
     <ul>
-<li>US Soccer Foundation</li>
+<li>U.S. Soccer Foundation</li>
 </ul>
 
 
