--- a/index.html
+++ b/index.html
@@ -154,6 +154,12 @@ document.createElement("article" );
                         <a href="http://www.twitter.com/gardnercenter">
                           <img src="/images/index/follow_on_twitter.png"></a>
                      </li>
+
+                     <li class=plugin>
+                        <g:plusone size="medium" annotation="none"></g:plusone>
+                     </li>
+
+
                    </ul>
                    <ul class="piped_right">
                      <li class="footer"><a href="/about_jgc/contact.html" class="footer">Contact Us</a></li>
@@ -221,5 +227,12 @@ document.createElement("article" );
 
 </script>
 
+<script type="text/javascript">
+ (function() {
+  var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+  po.src = 'https://apis.google.com/js/plusone.js';
+  var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+ })();
+</script>
 </body>
 </html>
