--- a/our_work/content-allwork.html
+++ b/our_work/content-allwork.html
@@ -27,7 +27,7 @@
 	  <h1 class="content-text-header">E</h1>
 		<ul style="list-style: none;">
 			<li><a href="ece.html">Early Childhood Education Linkages</a></li>
-			<li><a href="mapping.html">East Palo  Alto Mapping Usability Study</a></li>
+			<li><a href="mapping.html">East Palo  Alto Mapping Youth Resource Mapping</a></li>
 			<li><a href="youth_art_music.html">East Palo Alto Youth Art & Music Center</a></li>
 			<li><a href="english_learner.html">English Learner Analysis</a></li>
 			<li><a href="foster_youth.html">Educational Outcomes of Dependent Youth</a></li>
