--- a/our_work/content-alt-ed.html
+++ b/our_work/content-alt-ed.html
@@ -22,11 +22,11 @@
     </div> <!--end right side box div-->
 </aside>
                                              
-<p>Plus is a school-within-a-school program that serves students in the San Jose Unified School District who have grade-level abilities but have been unsuccessful in their comprehensive high school and are off track to graduate. PLUS is part of the district’s Learning Options Department’s menu of alternative programs for credit deficient students.  Each of the six Plus schools is staffed with two teachers and a counselor, and enrollment is capped at 40, by state law.  Teachers team-teach two sessions of twenty students each; all students must attend a minimum of 180 instructional minutes for 180 days. The program’s goal is for students to graduate with their home high school class.</p>
+<p>PLUS is a school-within-a-school program that serves students in the San Jose Unified School District who have grade-level abilities but have been unsuccessful in their comprehensive high school and are off track to graduate. PLUS is part of the district’s Learning Options Department’s menu of alternative programs for credit deficient students.  Each of the six Plus schools is staffed with two teachers and a counselor, and enrollment is capped at 40, by state law.  Teachers team-teach two sessions of twenty students each; all students must attend a minimum of 180 instructional minutes for 180 days. The program’s goal is for students to graduate with their home high school class.</p>
 
 <br>
 
-<p>This part of a larger study of California Continuation High Schools begun 2007 . As part of this study, researchers did in-depth site visits and data analysis at 22 continuation programs in three California counties, from November 2009 to October 2010. During site visits to each school we interviewed student groups, teachers, counselors, and school administrators. To learn about the community and policy context, we also interviewed district and county administrators and organizations serving this population of students. 
+<p>This part of a larger study of California Continuation High Schools begun 2007 . As part of this study, researchers did in-depth site visits and data analysis at 22 continuation programs in three California counties, from November 2009 to October 2010. During site visits to each school researchers interviewed student groups, teachers, counselors, and school administrators. To learn about the community and policy context, we also interviewed district and county administrators and organizations serving this population of students. 
 
  
 
